adding test cases and config changes